--- a/main.css
+++ b/main.css
@@ -1,1 +1,15 @@
-body {background-color:lightblue}
+body {background-color:lightblue;
+}
+
+
+.petStyles, .buttonStyles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+.btn, 
+.card {
+  margin: 10px;
+}
